--- a/index.html
+++ b/index.html
@@ -18,6 +18,54 @@
             margin-bottom: 20px;
             width: 100%;
         }
+         .form-container {
+            max-width: 500px;
+            margin: 0 auto; 
+            background-color: #e0e0e0; 
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .form-container h2 {
+            text-align: center;
+        }
+
+        .form-container label {
+            font-weight: bold;
+        }
+
+        .form-container input[type="text"],
+        .form-container input[type="email"],
+        .form-container input[type="password"],
+        .form-container input[type="date"],
+        .form-container select {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            margin-bottom: 15px;
+            border-radius: 8px; 
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
+        .form-container input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px;
+            width: 100%;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+
+        .form-container input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        .form-container p {
+            margin: 10px 0 5px;
+        }
     </style>
 </head>
 <body>
@@ -82,54 +130,56 @@
     </table>
 
     <!-- Registration Form -->
-    <h2>Registration Form</h2>
-    <form action="#" method="post">
-        <label for="name">Full Name:</label><br>
-        <input type="text" id="name" name="name" placeholder="Enter your full name" required><br><br>
+    <div class="form-container">
+        <h2>Registration Form</h2>
+        <form action="#" method="post">
+            <label for="name">Full Name:</label>
+            <input type="text" id="name" name="name" placeholder="Enter your full name" required>
 
-        <label for="email">Email Address:</label><br>
-        <input type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
+            <label for="email">Email Address:</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" placeholder="Create a password" required minlength="6"><br><br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="Create a password" required minlength="6">
 
-        <label for="dob">Date of Birth:</label><br>
-        <input type="date" id="dob" name="dob" required><br><br>
+            <label for="dob">Date of Birth:</label>
+            <input type="date" id="dob" name="dob" required>
 
-        <!-- Dropdown -->
-        <label for="country">Select Country:</label><br>
-        <select id="country" name="country" required>
-            <option value="">--Choose a country--</option>
-            <option value="kenya">Kenya</option>
-            <option value="uganda">Uganda</option>
-            <option value="tanzania">Tanzania</option>
-        </select><br><br>
+            <!-- Dropdown -->
+            <label for="country">Select Country:</label>
+            <select id="country" name="country" required>
+                <option value="">--Choose a country--</option>
+                <option value="kenya">Kenya</option>
+                <option value="uganda">Uganda</option>
+                <option value="tanzania">Tanzania</option>
+            </select>
 
-        <!-- Radio Buttons -->
-        <p>Gender:</p>
-        <input type="radio" id="male" name="gender" value="male" required>
-        <label for="male">Male</label><br>
+            <!-- Radio Buttons -->
+            <p>Gender:</p>
+            <input type="radio" id="male" name="gender" value="male" required>
+            <label for="male">Male</label><br>
 
-        <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label><br>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label><br>
 
-        <input type="radio" id="other" name="gender" value="other">
-        <label for="other">Other</label><br><br>
+            <input type="radio" id="other" name="gender" value="other">
+            <label for="other">Other</label><br><br>
 
-        <!-- Checkboxes -->
-        <p>Select your hobbies:</p>
-        <input type="checkbox" id="reading" name="hobbies" value="reading">
-        <label for="reading">Reading</label><br>
+            <!-- Checkboxes -->
+            <p>Select your hobbies:</p>
+            <input type="checkbox" id="reading" name="hobbies" value="reading">
+            <label for="reading">Reading</label><br>
 
-        <input type="checkbox" id="traveling" name="hobbies" value="traveling">
-        <label for="traveling">Traveling</label><br>
+            <input type="checkbox" id="traveling" name="hobbies" value="traveling">
+            <label for="traveling">Traveling</label><br>
 
-        <input type="checkbox" id="sports" name="hobbies" value="sports">
-        <label for="sports">Sports</label><br><br>
+            <input type="checkbox" id="sports" name="hobbies" value="sports">
+            <label for="sports">Sports</label><br><br>
 
-        <!-- Submit Button -->
-        <input type="submit" value="Register">
-    </form>
+            <!-- Submit Button -->
+            <input type="submit" value="Register">
+        </form>
+    </div>
 
 </body>
 </html>
